UI: add sign up page

--- a/src/components/screens/login/header.astro
+++ b/src/components/screens/login/header.astro
@@ -1,4 +1,4 @@
-<header class="flex flex-col items-center space-y-3 lg:items-start">
+<header class="flex flex-col space-y-3 text-center lg:text-start">
   <h1 class="text-4xl font-bold">Login</h1>
-  <p>Login to access your personal account</p>
+  <p class="text-foreground/80">Login to access your personal account</p>
 </header>
