--- a/src/components/screens/sign-up/subbmit-btn.astro
+++ b/src/components/screens/sign-up/subbmit-btn.astro
@@ -14,7 +14,7 @@ import DestructiveLink from "@/components/base/destructive-link.astro";
     Sign up
   </Button>
   <div class="flex items-center gap-2 justify-center">
-    <p class="font-light text-foreground/80">Don’t have an account?</p>
-    <DestructiveLink href="/sign-up">Sign up</DestructiveLink>
+    <p class="font-light text-foreground/80">Already have an account?</p>
+    <DestructiveLink href="/login">Login </DestructiveLink>
   </div>
 </div>
