--- a/src/pages/sign-up.astro
+++ b/src/pages/sign-up.astro
@@ -3,6 +3,6 @@ import SignupScreen from "@/components/screens/sign-up/signup-screen.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Authentic">
+<Layout title="Sign Up | Authentic">
   <SignupScreen />
 </Layout>
