--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
-import SignupScreen from "@/components/screens/sign-up/signup-screen.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Authentic">
-  <SignupScreen />
-</Layout>
+<Layout title="Authentic" />
