--- a/src/pages/login/inputs.astro
+++ b/src/pages/login/inputs.astro
@@ -31,6 +31,8 @@ import { Label } from "@/components/ui/label";
         Remember me
       </Label>
     </div>
-    <DestructiveLink href="#">Forgot password?</DestructiveLink>
+    <DestructiveLink href="/reset-password/enter-email"
+      >Forgot password?</DestructiveLink
+    >
   </div>
 </div>
