CORE: add auth hooks and service

--- a/src/components/base/logo.astro
+++ b/src/components/base/logo.astro
@@ -7,7 +7,7 @@ const { className }: Props = Astro.props;
 ---
 
 <div class={cn(className, "flex items-center select-none")}>
-  <img src="/favicon.svg" alt="Authentic Logo" />
+  <img src="/svg/favicon.svg" alt="Authentic Logo" />
 
   <p class="flex text-2xl">
     <span class="font-extrabold"> Auth </span>
