--- a/src/components/base/oauth-buttons.astro
+++ b/src/components/base/oauth-buttons.astro
@@ -4,12 +4,12 @@ import SocialLoginButton from "@/components/base/social-login-button.astro";
 
 <div class="flex justify-between">
   <SocialLoginButton>
-    <img src="/public/svg/faceboock-icon.svg" alt="" />
+    <img src="/svg/faceboock-icon.svg" alt="" />
   </SocialLoginButton>
   <SocialLoginButton
-    ><img src="/public/svg/google-icon.svg" alt="" /></SocialLoginButton
+    ><img src="/svg/google-icon.svg" alt="" /></SocialLoginButton
   >
   <SocialLoginButton>
-    <img src="/public/svg/apple-icon.svg" alt="" />
+    <img src="/svg/apple-icon.svg" alt="" />
   </SocialLoginButton>
 </div>
