--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -2,7 +2,7 @@
 import TextSeparator from "@/components/base/text-separator.astro";
 import Inputs from "@/pages/login/inputs.astro";
 import AuthPageLayout from "@/layouts/auth-page-layout.astro";
-import Layout from "@/layouts/Layout.astro";
+import Layout from "@/layouts/layout.astro";
 import Header from "@/components/base/header.astro";
 import TextLine from "@/components/base/text-line.astro";
 import DestructiveLink from "@/components/base/destructive-link.astro";
@@ -29,7 +29,7 @@ import { Button } from "@/components/ui/button";
       <OauthButtons />
     </Fragment>
     <Fragment slot="pic-section">
-      <img src="/public/img/succes-auth-pic.png" alt="" class="" />
+      <img src="/img/succes-auth-pic.png" alt="" class="" />
     </Fragment>
   </AuthPageLayout>
 </Layout>
