--- a/src/pages/reset-password/set-password/index.astro
+++ b/src/pages/reset-password/set-password/index.astro
@@ -1,7 +1,7 @@
 ---
 import Inputs from "@/pages/reset-password/set-password/inputs.astro";
 import AuthPageLayout from "@/layouts/auth-page-layout.astro";
-import Layout from "@/layouts/Layout.astro";
+import Layout from "@/layouts/layout.astro";
 import Header from "@/components/base/header.astro";
 import { Button } from "@/components/ui/button";
 ---
@@ -22,7 +22,7 @@ import { Button } from "@/components/ui/button";
       <div></div>
     </Fragment>
     <Fragment slot="pic-section">
-      <img src="/public/img/auth-tools-pic.png" alt="" class="" />
+      <img src="/img/auth-tools-pic.png" alt="" class="" />
     </Fragment>
   </AuthPageLayout>
 </Layout>
