--- a/src/pages/sign-up/index.astro
+++ b/src/pages/sign-up/index.astro
@@ -3,7 +3,7 @@ import AuthPageLayout from "@/layouts/auth-page-layout.astro";
 import Header from "@/components/base/header.astro";
 import Inputs from "@/pages/sign-up/inputs.astro";
 import TextSeparator from "@/components/base/text-separator.astro";
-import Layout from "@/layouts/Layout.astro";
+import Layout from "@/layouts/layout.astro";
 import OauthButtons from "@/components/base/oauth-buttons.astro";
 import TextLine from "@/components/base/text-line.astro";
 import DestructiveLink from "@/components/base/destructive-link.astro";
@@ -29,7 +29,7 @@ import { Button } from "@/components/ui/button";
       <OauthButtons />
     </Fragment>
     <Fragment slot="pic-section">
-      <img src="/public/img/sign-up-pic.png" alt="" class="" />
+      <img src="/img/sign-up-pic.png" alt="" class="" />
     </Fragment>
   </AuthPageLayout>
 </Layout>
