--- a/src/pages/reset-password/verify-code/index.astro
+++ b/src/pages/reset-password/verify-code/index.astro
@@ -1,7 +1,7 @@
 ---
 import Inputs from "@/pages/reset-password/verify-code/inputs.astro";
 import AuthPageLayout from "@/layouts/auth-page-layout.astro";
-import Layout from "@/layouts/Layout.astro";
+import Layout from "@/layouts/layout.astro";
 import Header from "@/components/base/header.astro";
 import ReturenLink from "@/components/base/returen-link.astro";
 import { Button } from "@/components/ui/button";
@@ -26,7 +26,7 @@ import { Button } from "@/components/ui/button";
       <div></div>
     </Fragment>
     <Fragment slot="pic-section">
-      <img src="/public/img/succes-auth-pic.png" alt="" class="" />
+      <img src="/img/succes-auth-pic.png" alt="" class="" />
     </Fragment>
   </AuthPageLayout>
 </Layout>
